proj/parser/Parser.java
/* Generated By:JavaCC: Do not edit this line. Parser.java */
package proj.parser;

import proj.ast.*;
import proj.types.*;
import proj.env.*;
import proj.defeq.*;
import java.util.*;

public class Parser implements ParserConstants {

  final public ASTNode Start() throws ParseException {
  ASTNode t;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 0:
      jj_consume_token(0);
           {if (true) return null;}
      break;
    case LET:
    case Bool:
    case LinBool:
    case MINUS:
    case NOT:
    case LPAR:
    case LRPAR:
    case QUESTION:
    case QUESTIONTYPES:
    case REFL:
    case HYP:
    case LETEQ:
    case IF:
    case PRINT:
    case PRINTLN:
    case FN:
    case LFN:
    case REC:
    case FST:
    case SND:
    case MATCH:
    case SPLIT:
    case TYPE:
    case TINT:
    case TLINT:
    case TBOOL:
    case TLBOOL:
    case TSTRING:
    case TUNION:
    case TLUNION:
    case LABEL:
    case LLABEL:
    case String:
    case Id:
    case LinNum:
    case Num:
      t = Let();
      jj_consume_token(TERM);
                       {if (true) return t;}
      break;
    default:
      jj_la1[0] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public ASTNode Let() throws ParseException {
  Token n, n2;
  ASTNode t, e1, e2;
  ASTType t1 = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case Bool:
    case LinBool:
    case MINUS:
    case NOT:
    case LPAR:
    case LRPAR:
    case QUESTION:
    case QUESTIONTYPES:
    case REFL:
    case HYP:
    case IF:
    case PRINT:
    case PRINTLN:
    case FN:
    case LFN:
    case REC:
    case FST:
    case SND:
    case MATCH:
    case TINT:
    case TLINT:
    case TBOOL:
    case TLBOOL:
    case TSTRING:
    case TUNION:
    case TLUNION:
    case LABEL:
    case LLABEL:
    case String:
    case Id:
    case LinNum:
    case Num:
      t = Check();
      break;
    case LET:
      jj_consume_token(LET);
      n = jj_consume_token(Id);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COLON:
        jj_consume_token(COLON);
        t1 = Type();
        break;
      default:
        jj_la1[1] = jj_gen;
        ;
      }
      jj_consume_token(EQUAL);
      e1 = BA();
      jj_consume_token(SEMIC);
      e2 = Let();
                                                                                    t = new ASTLet(n.image, e1, t1, e2);
      break;
    case LETEQ:
      jj_consume_token(LETEQ);
      n = jj_consume_token(Id);
      jj_consume_token(EQUAL);
      e1 = BA();
      jj_consume_token(SEMIC);
      e2 = Let();
                                                               t = new ASTLeteq(n.image, e1, e2);
      break;
    case SPLIT:
      jj_consume_token(SPLIT);
      jj_consume_token(LPAR);
      n = jj_consume_token(Id);
      jj_consume_token(VERT);
      n2 = jj_consume_token(Id);
      jj_consume_token(RPAR);
      jj_consume_token(EQUAL);
      e1 = BA();
      jj_consume_token(SEMIC);
      e2 = Let();
                                                                                           t = new ASTSplit(e1, n.image, n2.image, e2);
      break;
    case TYPE:
         HashMap<String,ASTType> lbl = new HashMap<String,ASTType>();
      label_1:
      while (true) {
        jj_consume_token(TYPE);
        n = jj_consume_token(Id);
        jj_consume_token(EQUAL);
        t1 = Type();
        jj_consume_token(SEMIC);
          if (lbl.containsKey(n.image)) { {if (true) throw new ParseException("duplicate id");} } else { lbl.put(n.image, t1); }
        if (jj_2_1(2)) {
          ;
        } else {
          break label_1;
        }
      }
      e2 = Let();
                       t = new ASTTypeDef(lbl, e2);
      break;
    default:
      jj_la1[2] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
     {if (true) return t;}
    throw new Error("Missing return statement in function");
  }

  final public ASTNode Check() throws ParseException {
  ASTNode t1, t2;
  ASTType tt1, tt2;
    if (jj_2_2(2147483647)) {
      tt1 = Type();
      jj_consume_token(QUESTIONTYPES);
      tt2 = Type();
                                                t1 = new ASTCheckTypes(tt1, tt2);
    } else if (jj_2_3(2147483647)) {
      t1 = Seq();
      jj_consume_token(QUESTION);
      t2 = Seq();
                                       t1 = new ASTCheck(t1, t2);
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case Bool:
      case LinBool:
      case MINUS:
      case NOT:
      case LPAR:
      case LRPAR:
      case QUESTION:
      case QUESTIONTYPES:
      case REFL:
      case HYP:
      case IF:
      case PRINT:
      case PRINTLN:
      case FN:
      case LFN:
      case REC:
      case FST:
      case SND:
      case MATCH:
      case LABEL:
      case LLABEL:
      case String:
      case Id:
      case LinNum:
      case Num:
        t1 = Seq();
        break;
      default:
        jj_la1[3] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
      {if (true) return t1;}
    throw new Error("Missing return statement in function");
  }

  final public ASTNode Seq() throws ParseException {
 Token op;
  ASTNode t1, t2;
    t1 = SeqExp();
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SEMIC:
        ;
        break;
      default:
        jj_la1[4] = jj_gen;
        break label_2;
      }
      op = jj_consume_token(SEMIC);
      t2 = SeqExp();
                 t1 = new ASTSeq(t1, t2);
    }
       {if (true) return t1;}
    throw new Error("Missing return statement in function");
  }

  final public ASTNode SeqExp() throws ParseException {
 Token op;
  ASTNode t1, t2, t;
    t1 = BA();
       {if (true) return t1;}
    throw new Error("Missing return statement in function");
  }

  final public ASTNode BA() throws ParseException {
 Token op;
  ASTNode t1, t2;
    t1 = BM();
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case OR:
        ;
        break;
      default:
        jj_la1[5] = jj_gen;
        break label_3;
      }
      op = jj_consume_token(OR);
      t2 = BM();
     t1 = new ASTOp(t1, t2, "||");
    }
       {if (true) return t1;}
    throw new Error("Missing return statement in function");
  }

  final public ASTNode BM() throws ParseException {
 Token op;
  ASTNode t1, t2;
    t1 = Rel();
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case AND:
        ;
        break;
      default:
        jj_la1[6] = jj_gen;
        break label_4;
      }
      op = jj_consume_token(AND);
      t2 = Rel();
                 t1 = new ASTOp(t1, t2, "&&");
    }
       {if (true) return t1;}
    throw new Error("Missing return statement in function");
  }

  final public ASTNode Rel() throws ParseException {
 Token op;
  ASTNode t1, t2;
    t1 = Exp();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case EQ:
    case GT:
    case LT:
    case GTEQ:
    case LTEQ:
    case DIF:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case EQ:
        op = jj_consume_token(EQ);
        break;
      case GT:
        op = jj_consume_token(GT);
        break;
      case LT:
        op = jj_consume_token(LT);
        break;
      case GTEQ:
        op = jj_consume_token(GTEQ);
        break;
      case LTEQ:
        op = jj_consume_token(LTEQ);
        break;
      case DIF:
        op = jj_consume_token(DIF);
        break;
      default:
        jj_la1[7] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      t2 = Exp();
      t1 = new ASTOp(t1, t2, op.image);
      break;
    default:
      jj_la1[8] = jj_gen;
      ;
    }
       {if (true) return t1;}
    throw new Error("Missing return statement in function");
  }

  final public ASTNode Exp() throws ParseException {
  Token op;
  ASTNode t1, t2;
    t1 = Term();
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PLUS:
      case MINUS:
        ;
        break;
      default:
        jj_la1[9] = jj_gen;
        break label_5;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PLUS:
        op = jj_consume_token(PLUS);
        break;
      case MINUS:
        op = jj_consume_token(MINUS);
        break;
      default:
        jj_la1[10] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      t2 = Term();
                  t1 = new ASTOp(t1,t2,op.image);
    }
       {if (true) return t1;}
    throw new Error("Missing return statement in function");
  }

  final public ASTNode Term() throws ParseException {
  ASTNode t1, t2;
    t1 = App();
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case STAR:
      case DIV:
        ;
        break;
      default:
        jj_la1[11] = jj_gen;
        break label_6;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case STAR:
        jj_consume_token(STAR);
        t2 = App();
                           t1 = new ASTOp(t1,t2,"*");
        break;
      case DIV:
        jj_consume_token(DIV);
        t2 = App();
                                     t1 = new ASTOp(t1,t2,"/");
        break;
      default:
        jj_la1[12] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
       {if (true) return t1;}
    throw new Error("Missing return statement in function");
  }

  final public ASTNode App() throws ParseException {
  ASTNode t1, t2;
    t1 = Fact();
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LPAR:
      case LRPAR:
        ;
        break;
      default:
        jj_la1[13] = jj_gen;
        break label_7;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LRPAR:
        jj_consume_token(LRPAR);
              t1 = new ASTApp(t1, new ASTUnit());
        break;
      case LPAR:
        jj_consume_token(LPAR);
        t2 = Let();
        jj_consume_token(RPAR);
                               t1 = new ASTApp(t1, t2);
        break;
      default:
        jj_la1[14] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    {if (true) return t1;}
    throw new Error("Missing return statement in function");
  }

  final public ASTNode Fact() throws ParseException {
  Token n, n2;
  ASTNode t = null, e1, e2, t2;
  ASTNode body, alt;
  ASTFunc tf, tc, tn, ltf, ltc, ltn;
  ASTType type, type2;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case Num:
      n = jj_consume_token(Num);
                t = new ASTInt(Integer.parseInt(n.image), false);
      break;
    case LinNum:
      n = jj_consume_token(LinNum);
                   t = new ASTInt(Integer.parseInt(n.image.substring(0, n.image.length()-1)), true);
      break;
    case Bool:
      n = jj_consume_token(Bool);
                 t = new ASTBool(Boolean.parseBoolean(n.image), false);
      break;
    case LinBool:
      n = jj_consume_token(LinBool);
                    t = new ASTBool(Boolean.parseBoolean(n.image.substring(0, n.image.length()-1)), true);
      break;
    case Id:
      n = jj_consume_token(Id);
                 t = new ASTId(n.image);
      break;
    case String:
      n = jj_consume_token(String);
                   t = new ASTString(n.image.substring(1, n.image.length()-1));
      break;
    case LRPAR:
      jj_consume_token(LRPAR);
                t = new ASTUnit();
      break;
    case MINUS:
      jj_consume_token(MINUS);
      t = Fact();
                         t = new ASTOp(new ASTInt(0, false), t, "-u");
      break;
    case NOT:
      jj_consume_token(NOT);
      t = Fact();
                       t = new ASTOp(new ASTBool(true, false), t, "~");
      break;
    case IF:
      jj_consume_token(IF);
      t = BA();
      jj_consume_token(LBRA);
      e1 = Let();
      jj_consume_token(RBRA);
      jj_consume_token(ELSE);
      jj_consume_token(LBRA);
      e2 = Let();
      jj_consume_token(RBRA);
                                                                         t = new ASTIf(t, e1, e2);
      break;
    case REC:
      jj_consume_token(REC);
      n = jj_consume_token(Id);
      jj_consume_token(COLON);
      type = Type();
      jj_consume_token(LBRA);
      t = Let();
      jj_consume_token(RBRA);
                                                                   t = new ASTRec(n.image, t, type);
      break;
    case FN:
      jj_consume_token(FN);
      n = jj_consume_token(Id);
      jj_consume_token(COLON);
      type = Type();
                                          tf = new ASTFunc(n.image, null, type, false); tc = tf;
      label_8:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMA:
          ;
          break;
        default:
          jj_la1[15] = jj_gen;
          break label_8;
        }
        jj_consume_token(COMMA);
        n = jj_consume_token(Id);
        jj_consume_token(COLON);
        type = Type();
                                                          tn = new ASTFunc(n.image, null, type, false); tc.setBody(tn); tc = tn;
      }
      jj_consume_token(ARROW);
      jj_consume_token(LBRA);
      e2 = Let();
      jj_consume_token(RBRA);
                                                             tc.setBody(e2); t = tf;
      break;
    case LFN:
      jj_consume_token(LFN);
      n = jj_consume_token(Id);
      jj_consume_token(COLON);
      type = Type();
                                           ltf = new ASTFunc(n.image, null, type, true); ltc = ltf;
      label_9:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMA:
          ;
          break;
        default:
          jj_la1[16] = jj_gen;
          break label_9;
        }
        jj_consume_token(COMMA);
        n = jj_consume_token(Id);
        jj_consume_token(COLON);
        type = Type();
                                                          ltn = new ASTFunc(n.image, null, type, true); ltc.setBody(ltn); ltc = ltn;
      }
      jj_consume_token(DLOLLIPOP);
      jj_consume_token(LBRA);
      e2 = Let();
      jj_consume_token(RBRA);
                                                                 ltc.setBody(e2); t = ltf;
      break;
    case PRINT:
      jj_consume_token(PRINT);
      t = Fact();
                         t = new ASTPrint(t, false);
      break;
    case PRINTLN:
      jj_consume_token(PRINTLN);
      t = Fact();
                           t = new ASTPrint(t, true);
      break;
    case FST:
    case SND:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case FST:
        n = jj_consume_token(FST);
        break;
      case SND:
        n = jj_consume_token(SND);
        break;
      default:
        jj_la1[17] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(LPAR);
      t = Let();
      jj_consume_token(RPAR);
                                                  t = new ASTChoice(t, n.image.equals("fst"));
      break;
    case MATCH:
      jj_consume_token(MATCH);
      t2 = Let();
      jj_consume_token(LBRA);
      t = Match(t2);
      break;
    case LABEL:
      n = jj_consume_token(LABEL);
      jj_consume_token(LPAR);
      t = Let();
      jj_consume_token(RPAR);
                                             t = new ASTUnion(n.image, t, false);
      break;
    case LLABEL:
      n = jj_consume_token(LLABEL);
      jj_consume_token(LPAR);
      t = Let();
      jj_consume_token(RPAR);
                                              t = new ASTUnion(n.image, t, true);
      break;
    case LPAR:
      jj_consume_token(LPAR);
      t = TermList();
      jj_consume_token(RPAR);
      break;
    case QUESTION:
      jj_consume_token(QUESTION);
      jj_consume_token(LPAR);
      t = Let();
      jj_consume_token(COMMA);
      t2 = Let();
      jj_consume_token(RPAR);
                                                              t = new ASTCheck(t, t2);
      break;
    case QUESTIONTYPES:
      jj_consume_token(QUESTIONTYPES);
      jj_consume_token(LPAR);
      type = Type();
      jj_consume_token(COMMA);
      type2 = Type();
      jj_consume_token(RPAR);
                                                                           t = new ASTCheckTypes(type, type2);
      break;
    case REFL:
      jj_consume_token(REFL);
      if (jj_2_4(2)) {
        jj_consume_token(LPAR);
        t = Fact();
        jj_consume_token(RPAR);
      } else {
        ;
      }
                                                        t = new ASTRefl(t, new TRefl());
      break;
    case HYP:
      jj_consume_token(HYP);
              t = new ASTRefl(null, new THyp());
      break;
    default:
      jj_la1[18] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
     {if (true) return t;}
    throw new Error("Missing return statement in function");
  }

  final public ASTNode TermList() throws ParseException {
  ASTNode t, t2;
    t = Let();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case VERT:
    case COMMA:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        jj_consume_token(COMMA);
        t2 = TermCommaList();
                                            t = new ASTPair(t, t2, false);
        break;
      case VERT:
        jj_consume_token(VERT);
        t2 = TermVertList();
                                           t = new ASTPair(t, t2, true);
        break;
      default:
        jj_la1[19] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
    default:
      jj_la1[20] = jj_gen;
      ;
    }
    {if (true) return t;}
    throw new Error("Missing return statement in function");
  }
